--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,7 @@ project(":core") {
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+        compile "com.sksamuel.gwt:gwt-websockets:1.0.4:sources"
     }
 }
 
