--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ allprojects {
     version = '1.0'
     ext {
         appName = 'InterStellarEmpires'
-        gdxVersion = '1.5.3'
+        gdxVersion = '1.5.4'
         roboVMVersion = '1.0.0-beta-03'
         box2DLightsVersion = '1.3'
         ashleyVersion = '1.3.1'
@@ -61,6 +61,8 @@ project(":core") {
 
 
     dependencies {
+        compile "com.badlogicgames.gdx:gdx-backend-gwt:$gdxVersion"
+        compile "com.badlogicgames.gdx:gdx-backend-gwt:$gdxVersion:sources"
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         compile "com.sksamuel.gwt:gwt-websockets:1.0.4:sources"
